--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "create-admin": "tsx src/server/scripts/createAdmin.ts"
   },
   "dependencies": {
+    "@dr.pogodin/react-helmet": "^3.0.4",
     "@headlessui/react": "^2.1.0",
     "@types/nodemailer": "^7.0.5",
     "autoprefixer": "^10.4.20",
@@ -33,14 +34,15 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^4.0.0",
     "mongoose": "^8.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.12",
     "postcss": "^8.4.49",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@dr.pogodin/react-helmet": "^3.0.4",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17",
     "zod": "^3.24.1",
